--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         height: 100vh;
         min-width: 100%;
         font-family: "Poppins";
-        background: black;
-        transition: all 2s;
+        background: white;
     }
     .feature{
         position: relative;
@@ -71,8 +70,8 @@
         background-position: center;
         background-position-y: -1rem;
         background-color: white;
-        transition: all 2s;
-        right: 25rem;
+        /* transition: all 2s;
+        right: 25rem; */
     }
     .feature .group1 .box2{
         position: relative;
@@ -85,9 +84,9 @@
         background-position: center;
         background-position-y: -2rem;
         background-position-x: 0rem;
-        transition: all 2s;
+        /* transition: all 2s;
         transform: scale(1.5);
-        left: 25%;
+        left: 25%; */
     }
     .feature .group1 .box3{
         position: relative;
@@ -99,8 +98,8 @@
         background-size: cover;
         background-position: center;
         background-position-y: -2rem;
-        transition: all 2s;
-        right: -15rem;
+        /* transition: all 2s;
+        right: -15rem; */
     }
     .feature .group1 .box4{
         position: relative;
@@ -111,8 +110,8 @@
         background-repeat: none;
         background-size: cover;
         background-position: center;
-        top: 15rem;
-        transition: all 2s;
+        /* top: 15rem;
+        transition: all 2s; */
     }
     .content{
         position: relative;
@@ -123,12 +122,12 @@
     }
     #play{
         position: absolute;
-        left: 60%;
+        left: 0;
         font-size: 5rem;
-        background-color: black;
+        background-color: white;
         border-radius: 50%;
-        transform: rotate(360deg);
-        transition: all 2s;
+        /* transform: rotate(360deg);
+        transition: all 2s; */
     }
     .element{
         display: flex;
@@ -144,7 +143,7 @@
     }
     .text{
         position: relative;
-        left: 70%;
+        left: 0;
         width: 100%;
         text-align: center ;
         font-weight: 700;
@@ -207,7 +206,7 @@
         @NguyenDuyThinh
     </div>
 </body>
-<script>
+<!-- <script>
     const start = document.querySelector('body');
     start.onclick=()=>{
         start.style.background="white";
@@ -225,5 +224,5 @@
         const text = document.querySelectorAll('.text');
         for (const txt of text) txt.style.left="0";
     }
-</script>
+</script> -->
 </html>
