--- a/index.html
+++ b/index.html
@@ -18,18 +18,31 @@
         margin: 0;
     }
     body{
-        margin: 0;
-        padding: 0;
+        margin: 0px;
+        padding: 0px;
         height: 100vh;
-        min-width: 100%;
+        width: 100%;
         font-family: "Poppins";
         background: white;
+        overflow-x: hidden;
+    }
+    @media
+    only screen and (-webkit-min-device-pixel-ratio: 1.5),
+    only screen and (-o-min-device-pixel-ratio: 3/2),
+    only screen and (min--moz-device-pixel-ratio: 1.5),
+    only screen and (min-device-pixel-ratio: 1.5){
+        html,
+        body{
+            width:100%;
+            overflow-x:hidden;
+        }
     }
     .feature{
         position: relative;
         height: 400px;
         margin: 0;
         padding: 10%;
+        width: 80%;
         background-image: url("5.jpg");
         border-radius: 1rem;
         box-shadow: 0 5px 15px black;
@@ -70,8 +83,28 @@
         background-position: center;
         background-position-y: -1rem;
         background-color: white;
-        /* transition: all 2s;
-        right: 25rem; */
+        transition: all 1s;
+    }
+    .feature .group1 .box1::before{
+        display: flex;
+        align-items: center;
+        content: 'Hi, my name is Nguyen Duy Thinh and as the picture shown, I love the street lifestyle, this doesnot means I live on street :>';
+        position: absolute;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        z-index: 1500;
+        opacity: 0;
+        transition: all 1s;
+    }
+    .feature .group1 .box1:hover{
+        transform: scale(1.2);
+        z-index: 1000;
+        box-shadow: 0 5px 15px black;
+    }
+    .feature .group1 .box1:hover::before{
+        opacity: 1;
     }
     .feature .group1 .box2{
         position: relative;
@@ -84,9 +117,28 @@
         background-position: center;
         background-position-y: -2rem;
         background-position-x: 0rem;
-        /* transition: all 2s;
-        transform: scale(1.5);
-        left: 25%; */
+        transition: all 1s;
+    }
+    .feature .group1 .box2::before{
+        display: flex;
+        align-items: center;
+        content: 'I love photography, but I was not "handsome" enough to be a model haha, but I still love editing artistically. And I had some passionating projects :>';
+        position: absolute;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        z-index: 1500;
+        opacity: 0;
+        transition: all 1s;
+    }
+    .feature .group1 .box2:hover::before{
+        opacity: 1;
+    }
+    .feature .group1 .box2:hover{
+        transform: scale(1.2);
+        z-index: 1000;
+        box-shadow: 0 5px 15px black;
     }
     .feature .group1 .box3{
         position: relative;
@@ -98,8 +150,28 @@
         background-size: cover;
         background-position: center;
         background-position-y: -2rem;
-        /* transition: all 2s;
-        right: -15rem; */
+        transition: all 1s;
+    }
+    .feature .group1 .box3::before{
+        display: flex;
+        align-items: center;
+        content: 'Friends with me like a family :>';
+        position: absolute;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        z-index: 1500;
+        opacity: 0;
+        transition: all 1s;
+    }
+    .feature .group1 .box3:hover::before{
+        opacity: 1;
+    }
+    .feature .group1 .box3:hover{
+        transform: scale(1.2);
+        z-index: 1000;
+        box-shadow: 0 5px 15px black;
     }
     .feature .group1 .box4{
         position: relative;
@@ -110,8 +182,28 @@
         background-repeat: none;
         background-size: cover;
         background-position: center;
-        /* top: 15rem;
-        transition: all 2s; */
+        transition: all 1s;
+    }
+    .feature .group1 .box4::before{
+        display: flex;
+        align-items: center;
+        content: 'This is not about the Voice, it is about acting weird. Yes, it is me, I always act not like a human but never feel shame';
+        position: absolute;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        z-index: 1500;
+        opacity: 0;
+        transition: all 1s;
+    }
+    .feature .group1 .box4:hover::before{
+        opacity: 1;
+    }
+    .feature .group1 .box4:hover{
+        transform: scale(1.2);
+        z-index: 1000;
+        box-shadow: 0 5px 15px black;
     }
     .content{
         position: relative;
@@ -195,10 +287,6 @@
         </div>
         <div class="element">
             <span id="play" class="material-icons-outlined">play_circle_filled</span>
-            <div class="text">Email</div>
-        </div>
-        <div class="element">
-            <span id="play" class="material-icons-outlined">play_circle_filled</span>
             <div class="text">Github</div>
         </div>
     </div>
@@ -206,23 +294,16 @@
         @NguyenDuyThinh
     </div>
 </body>
-<!-- <script>
-    const start = document.querySelector('body');
-    start.onclick=()=>{
-        start.style.background="white";
-        document.querySelector(".box1").style.right="0px";
-        document.querySelector(".box2").style.transform="scale(1)";
-        document.querySelector(".box2").style.left="0px";
-        document.querySelector(".box3").style.right="0px";
-        document.querySelector(".box4").style.top="0";
-        const play = document.querySelectorAll('.material-icons-outlined');
-        for (const pl of play){
-            pl.style.transform="rotate(0deg)";
-            pl.style.left="15px";
-            pl.style.backgroundColor="white";
-        }
-        const text = document.querySelectorAll('.text');
-        for (const txt of text) txt.style.left="0";
+<script>
+    const link = [
+        "https://www.facebook.com/ng.duy.thinh.0201/",
+        "https://www.instagram.com/dythinhng/?hl=vi",
+        "tel:0916044383",
+        "https://github.com/thinhsuy"
+    ];
+    const play = document.querySelectorAll('.element');
+    for (let i=0; i<link.length; i++){
+        play[i].onclick=()=>{window.open(link[i],"_blank");}
     }
-</script> -->
+</script>
 </html>
